Create styler class in python; add rust classes for working with colors; add more attributes to `background_gradient` (not used yet)

--- a/examples/notebooks/Example1.ipynb
+++ b/examples/notebooks/Example1.ipynb
@@ -15,36 +15,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3c49bc6b-e739-4739-ac58-487386af2cb0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from polars_styler.polars_styler import pydf_to_pystyler\n",
+    "from polars_styler.styler import Styler, style"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "bada2e7a-086e-4be4-9479-31e30d03b7d0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Styler:\n",
-    "\n",
-    "    def __init__(self, s):\n",
-    "        self._s = s\n",
-    "        \n",
-    "    def set_precision(self, precision):\n",
-    "        self._s.set_precision(precision)\n",
-    "        return self\n",
-    "        \n",
-    "    def background_gradient(self, column):\n",
-    "        self._s.background_gradient(column)\n",
-    "        return self\n",
-    "\n",
-    "    def _repr_html_(self):\n",
-    "        return self._s.render()\n",
-    "\n",
-    "        \n",
-    "def style(df_self):\n",
-    "    # use this to patch pl.DataFrame.style\n",
-    "    from polars_styler import pydf_to_pystyler\n",
-    "\n",
-    "    py_styler = pydf_to_pystyler(df_self)\n",
-    "    return Styler(py_styler)\n",
-    "\n",
-    "\n",
-    "pl.DataFrame.style = style\n"
+    "pl.DataFrame.style = style"
    ]
   },
   {
@@ -88,7 +74,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data.style().background_gradient(\"y\")"
+    "data.style().background_gradient(subset=[\"y\"])"
    ]
   }
  ],
