Export labeling to python, include in example notebook

--- a/examples/notebooks/Example1.ipynb
+++ b/examples/notebooks/Example1.ipynb
@@ -9,7 +9,9 @@
    "source": [
     "import math\n",
     "\n",
-    "import polars as pl"
+    "import polars as pl\n",
+    "from polars_styler.polars_styler import pydf_to_pystyler\n",
+    "from polars_styler.styler import Styler, style"
    ]
   },
   {
@@ -18,20 +20,7 @@
    "id": "3c49bc6b-e739-4739-ac58-487386af2cb0",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from polars_styler.polars_styler import pydf_to_pystyler\n",
-    "from polars_styler.styler import Styler, style"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bada2e7a-086e-4be4-9479-31e30d03b7d0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pl.DataFrame.style = style"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -45,6 +34,14 @@
     "    \"y\": [math.pi, math.sqrt(2), 1/3]\n",
     "})\n",
     "data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b3fc41b0-48f6-400d-9d28-63dae880c9fc",
+   "metadata": {},
+   "source": [
+    "## Format values"
    ]
   },
   {
@@ -68,6 +65,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0b58313d-62ac-4c47-9c3a-6d7dd1c4d7cf",
+   "metadata": {},
+   "source": [
+    "## Conditional formatting"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "561b7adf-63e8-4f09-a0b5-87ba206416f5",
@@ -75,6 +80,34 @@
    "outputs": [],
    "source": [
     "data.style().background_gradient(subset=[\"y\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "31b0f251-9e1e-4e5d-856b-bd9cd46faa3f",
+   "metadata": {},
+   "source": [
+    "## Labeling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee74fa82-d201-4274-b9fa-ac6fd967925a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.style().set_labels([\"First\", \"Second\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a350279f-9577-4c32-afc1-b1dbb84fb5cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.style().set_labels({\"x\": \"First\", \"y\": \"Second\"})"
    ]
   }
  ],
