Add method for creating bars inside cells

--- a/examples/notebooks/Example1.ipynb
+++ b/examples/notebooks/Example1.ipynb
@@ -3,6 +3,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "406373fd-41dd-4420-a933-107a54471f36",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install ../.."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "9c3dfc27-2527-44e1-949c-ddde103aced3",
    "metadata": {},
    "outputs": [],
@@ -13,14 +23,6 @@
     "from polars_styler.polars_styler import pydf_to_pystyler\n",
     "from polars_styler.styler import Styler, style"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3c49bc6b-e739-4739-ac58-487386af2cb0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -80,6 +82,16 @@
    "outputs": [],
    "source": [
     "data.style().background_gradient(subset=[\"y\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fbee200f-5cc6-4666-b037-18c9735bd390",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.style().bar(subset=[\"y\"])"
    ]
   },
   {
